src/components/Gallery/Gallery.css
.gallery {
    padding-bottom: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-grow: 1;
    background-color: #232222;
    color: #fff;
}

.gallery-container {
    width: 60%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.gallery-main-image-container {
    height: auto;
    width: 100%;
    position: relative;
}

.gallery-main-image {
    position: relative;
    aspect-ratio: 16/10;
    height: 100%;
    font-weight: bold;
    font-size: x-large;
    color: rgb(42, 41, 41);
}

@media (max-width: 768px) {
    .gallery-main-image {
        font-size: large;
    }
}
@media (max-width: 576px) {
    .gallery-main-image {
        font-size: medium;
    }
}

.gallery-main-image img {
    max-height: 100%;
    max-width: 100%;
    opacity: 0;
}

img.image-visible {
    opacity: 1;
}

.portrait {
    width: auto;
    height: 100%;
    object-fit: contain;
}

.landscape {
    width: 100%;
    height: auto;
    object-fit: cover;
}

.gallery-main-image-nav-right,
.gallery-main-image-nav-left {
    position: absolute;
    top: 50%;
    padding: 10px;
    cursor: pointer;
    transform: translateY(-50%);
    background-color: #dad5d5;
    opacity: 0.5;
    color: #000;
}

.gallery-main-image-nav-left {
    left: 0;
    
}

.gallery-main-image-nav-right {
    right: 0;
}

.gallery-main-image-nav-left:hover,
.gallery-main-image-nav-right:hover {
    opacity: 1;
    background-color: #f5f515;
}

.bullets {
    position: absolute;
    bottom: 25px;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 2;
}
  
.bullet {
    height: 10px;
    width: 10px;
    border-radius: 50%;
    margin: 0 5px;
    cursor: pointer;
    transition: background-color 0.3s;
}

.bullet.active,
.bullet:hover {
    background-color: #f5f515;
    color: #f5f515;
    scale: 1.3;
}

.gallery-thumbnail-container {
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    width: 100%;
    aspect-ratio: 5/1;
}

.gallery-thumbnail-container::-webkit-scrollbar {
    display: none;
}

.gallery-thumbnail {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    height: 100%;
    margin-right: 5px;
    cursor: pointer;
}

.gallery-thumbnail img {
    object-fit: contain;
    opacity: 0.3;
    max-height: 100%;
    max-width: 100%;
}

.gallery-thumbnail img.portrait {
    width: 100%;
    height: auto;
}

.gallery-thumbnail img.landscape {
    width: auto;
    height: 100%;
}

img.active-thumb {
    opacity: 1;
}

